--- a/HW3/tests/TODO
+++ b/HW3/tests/TODO
@@ -26,18 +26,18 @@ Check precedence between operators (maybe)?
 
 recursion and a function call within a function call [V]
 
-check swithc has a scope but each case does not
+check swithc has a scope but each case does not [V]
 
-check conversion from byte to int but not form int to byte
+check conversion from byte to int but not form int to byte [V]
 
-test with print and printi that only they can print string
+test with print and printi that only they can print string [V]
 
-return byte to a function with retType int
+return byte to a function with retType int [V]
 
-switch only gest numerical expresion 
+switch only gest numerical expresion [V]
 
 
-check only 1 correctly typed main
+check only 1 correctly typed main [V]
 
 prototype mismatch test with big function with calls that can and cannot be cast
 
